# diesp-docs

./: --not-ok-deepseach-identificar-paginas--not-ok.py  --not-ok-ghostscript-reparar-pdf--not-ok.py  --not-ok-identificar-paginas-probab-cada-pagina--not-ok.py  --not-ok-nlp_on_documents--not-ok.py  apos_clique_pdf.html  baixar_pdf_tjpb-headsup.py  baixar_pdf_tjpb-login.py  baixar_pdf_tjpb.py  concatenate-excel-files.py  diesp-json.py  extrair-paginas-do-pdf.py  install-libs.py  normalizar-nomes-repetidos.py  pagina_inicial.html  pyproject.toml  remover-da-comarca-2a-coluna.py  reparar-pdfs.py  resultados_pesquisa.html  separar-pdfs-corrompidos.py  substituir-da-capital-por-de-joao-pessoa.py
.devcontainer/: devcontainer.json
excel-normalized-joao-pessoa/: substituido_processosTramitadosPDF-NOVO.xlsx
excel-output/: processosTramitadosPDF-NOVO.xlsx
