[tool.poetry]
name = "diesp-json"
version = "0.1.0"
description = "app para passar o json feito no lammaindex para excel"
authors = ["sindlinger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
unidecode = "^1.3.8"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
poppler-utils = "^0.1.0"
pillow = "^11.0.0"
encode = "^0.0.0"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
